# emotetotgsticker

./: .gitignore  README.md  config.py  emote_links.txt  emote_to_sticker.py  logging_config.py  pyproject.toml  requirements.txt  utils.py
